Se corrigen Cards y se hacen responsive

--- a/index.html
+++ b/index.html
@@ -113,40 +113,43 @@
     <section class="container" id="destacado">
         <h1 class="text-white text-center">Destacado</h1>
         <hr>
-        <div class="card-group text-white">
-            <div class="card bg-black border border-light border-2 rounded-3 mx-3">
-                <img src="./assets/img/card1.jpg" class="card-img-top card-images" alt="...">
-                <div class="card-body bg-quienes-somos">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-
+        <div class="row">
+            <div class="card col-md-6 col-lg-3 bg-black my-2">
+                <img src="./assets/img/card1.jpg" class="card-img-top rounded-top border-top border-end border-start border-light" alt="...">
+                <div class="card-body bg-quienes-somos rounded-bottom  border-end border-start border-bottom border-light">
+                    <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique voluptatum eligendi neque amet debitis molestias non, impedit nulla velit nihil?</p>
                 </div>
             </div>
-            <div class="card bg-black border border-light border-2 rounded-3 mx-3">
-                <img src="./assets/img/card2.jpg" class="card-img-top card-images w-auto" alt="...">
-                <div class="card-body bg-quienes-somos">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-
+            <div class="card col-md-6 col-lg-3 bg-black my-2">
+                <img src="./assets/img/card2.jpg" class="card-img-top rounded-top border-top border-end border-start border-light" alt="...">
+                <div class="card-body bg-quienes-somos rounded-bottom  border-end border-start border-bottom border-light">
+                    <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique voluptatum eligendi neque amet debitis molestias non, impedit nulla velit nihil?</p>
                 </div>
             </div>
-            <div class="card bg-black border border-light border-2 rounded-3 mx-3">
-                <img src="./assets/img/card3.jpg" class="card-img-top card-images" alt="...">
-                <div class="card-body bg-quienes-somos">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-
+            <div class="card col-md-6 col-lg-3 bg-black my-2">
+                <img src="./assets/img/card3.jpg" class="card-img-top rounded-top border-top border-end border-start border-light" alt="...">
+                <div class="card-body bg-quienes-somos rounded-bottom  border-end border-start border-bottom border-light">
+                    <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique voluptatum eligendi neque amet debitis molestias non, impedit nulla velit nihil?</p>
                 </div>
             </div>
-            <div class="card bg-black border border-light border-2 rounded-3 mx-3">
-                <img src="./assets/img/card4.jpg" class="card-img-top card-images" alt="...">
-                <div class="card-body bg-quienes-somos">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-
+            <div class="card col-md-6 col-lg-3 bg-black my-2">
+                <img src="./assets/img/card4.jpg" class="card-img-top rounded-top border-top border-end border-start border-light" alt="...">
+                <div class="card-body bg-quienes-somos rounded-bottom  border-end border-start border-bottom border-light">
+                    <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique voluptatum eligendi neque amet debitis molestias non, impedit nulla velit nihil?</p>
                 </div>
             </div>
         </div>
+
+
+
+
+
+
+
 
         <div>
             asd
