--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-light fixed-top bg-transparent">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="./assets/img/viajes.svg">Viajes Chile</a>
+        <div class="container">
+            <img src="./assets/img/viajes.svg" alt="" class="img-fluid svg-image mx-3">
+            <a class="navbar-brand" href="#">Viajes Chile</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
