Se añade formulario y footer , se completa html y css

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <a class="nav-link active" aria-current="page" href="#destacado">Destacado</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Contacto</a>
+                        <a class="nav-link active" aria-current="page" href="#contacto">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -78,7 +78,7 @@
         <div class="card-group my-5">
             <div class="card bg-black mx-3">
                 <div class="card-body text-white fw-light">
-                    <div class="card-title text-center bg-quienes-somos text-white py-2">
+                    <div class="card-title text-center bg-ligth-blue text-white py-2">
                         <i class="fas fa-plane"></i>
                     </div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente distinctio pariatur, similique impedit ex cum voluptas aperiam, dolore aut odit asperiores nam aliquam, autem hic quo perferendis officia dicta tenetur! Temporibus culpa
@@ -91,7 +91,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente distinctio pariatur, similique impedit ex cum voluptas aperiam, dolore aut odit asperiores nam aliquam, autem hic quo perferendis officia dicta tenetur! Temporibus culpa
                         quod mollitia tempora dolore laboriosam impedit vero? Totam quo, quisquam praesentium, excepturi non, similique vero voluptas accusantium laboriosam dicta ipsam corrupti rerum mollitia aut! Nemo id illo unde. Ipsa, temporibus distinctio
                         aspernatur dolore nulla culpa reprehenderit cum quidem ea in minima. Sint molestiae eveniet ipsam in assumenda debitis quidem nobis, et, porro beatae facilis aliquid mollitia eos optio.</p>
-                    <div class="card-title text-center bg-quienes-somos text-white py-2 ">
+                    <div class="card-title text-center bg-ligth-blue text-white py-2 ">
                         <i class="fas fa-mountain"></i>
                     </div>
                 </div>
@@ -99,7 +99,7 @@
             </div>
             <div class="card bg-black mx-3">
                 <div class="card-body text-white fw-light">
-                    <div class="card-title text-center bg-quienes-somos text-white py-2">
+                    <div class="card-title text-center bg-ligth-blue text-white py-2">
                         <i class="fas fa-route"></i>
                     </div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente distinctio pariatur, similique impedit ex cum voluptas aperiam, dolore aut odit asperiores nam aliquam, autem hic quo perferendis officia dicta tenetur! Temporibus culpa
@@ -112,58 +112,86 @@
 
     <!--Destacado-->
     <section class="container" id="destacado">
-        <h1 class="text-white text-center">Destacado</h1>
+        <h1 class="text-white text-center fw-bold">Destacado</h1>
         <hr>
         <div class="row">
             <div class="card col-md-6 col-lg-3 bg-black my-2">
                 <img src="./assets/img/card1.jpg" class="card-img-top rounded-top border-top border-end border-start border-light" alt="...">
-                <div class="card-body bg-quienes-somos rounded-bottom  border-end border-start border-bottom border-light">
+                <div class="card-body bg-ligth-blue rounded-bottom  border-end border-start border-bottom border-light">
                     <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique voluptatum eligendi neque amet debitis molestias non, impedit nulla velit nihil?</p>
                 </div>
             </div>
             <div class="card col-md-6 col-lg-3 bg-black my-2">
                 <img src="./assets/img/card2.jpg" class="card-img-top rounded-top border-top border-end border-start border-light" alt="...">
-                <div class="card-body bg-quienes-somos rounded-bottom  border-end border-start border-bottom border-light">
+                <div class="card-body bg-ligth-blue rounded-bottom  border-end border-start border-bottom border-light">
                     <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique voluptatum eligendi neque amet debitis molestias non, impedit nulla velit nihil?</p>
                 </div>
             </div>
             <div class="card col-md-6 col-lg-3 bg-black my-2">
                 <img src="./assets/img/card3.jpg" class="card-img-top rounded-top border-top border-end border-start border-light" alt="...">
-                <div class="card-body bg-quienes-somos rounded-bottom  border-end border-start border-bottom border-light">
+                <div class="card-body bg-ligth-blue rounded-bottom  border-end border-start border-bottom border-light">
                     <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique voluptatum eligendi neque amet debitis molestias non, impedit nulla velit nihil?</p>
                 </div>
             </div>
             <div class="card col-md-6 col-lg-3 bg-black my-2">
                 <img src="./assets/img/card4.jpg" class="card-img-top rounded-top border-top border-end border-start border-light" alt="...">
-                <div class="card-body bg-quienes-somos rounded-bottom  border-end border-start border-bottom border-light">
+                <div class="card-body bg-ligth-blue rounded-bottom  border-end border-start border-bottom border-light">
                     <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique voluptatum eligendi neque amet debitis molestias non, impedit nulla velit nihil?</p>
                 </div>
             </div>
         </div>
-
-
-
-
-
-
-
-
-        <div>
-            asd
-        </div>
-
     </section>
 
+    <section class="container my-5 py-5" id=contacto>
+        <h1 class="text-white text-center fw-bold">Contacto</h1>
+        <hr>
+        <div class="typeform-widget" data-url="https://form.typeform.com/to/ooI13cqG?typeform-medium=embed-snippet" style="width: 100%; height: 500px;"></div>
+        <script>
+            (function() {
+                var qs, js, q, s, d = document,
+                    gi = d.getElementById,
+                    ce = d.createElement,
+                    gt = d.getElementsByTagName,
+                    id = "typef_orm",
+                    b = "https://embed.typeform.com/";
+                if (!gi.call(d, id)) {
+                    js = ce.call(d, "script");
+                    js.id = id;
+                    js.src = b + "embed.js";
+                    q = gt.call(d, "script")[0];
+                    q.parentNode.insertBefore(js, q)
+                }
+            })()
+        </script>
+    </section>
+    <footer class="container-fluid bg-ligth-blue py-3">
+        <div class="row align-items-center">
+            <div class="col-md-6">
+                <h1 class="text-white text-center fw-bold">VIAJES CHILE</h1>
+            </div>
+            <div class="col-md-6 ">
+                <div class="text-white text-center fa-2x m-1 ">
+                    <i class="fab fa-github-square fa-2x m-1 "></i>
+                    <i class="fab fa-linkedin fa-2x m-1 "></i>
+                    <i class="fab fa-twitter-square fa-2x m-1 "></i>
+                    <i class="fab fa-facebook-square fa-2x m-1 "></i>
+                </div>
+            </div>
+
+        </div>
+
+    </footer>
 
 
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js " integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8 " crossorigin="anonymous "></script>
 </body>
 
 </html>
