--- a/index.html
+++ b/index.html
@@ -168,6 +168,8 @@
             })()
         </script>
     </section>
+
+    <!--Footer-->
     <footer class="container-fluid bg-ligth-blue py-3">
         <div class="row align-items-center">
             <div class="col-md-6">
@@ -181,16 +183,14 @@
                     <i class="fab fa-facebook-square fa-2x m-1 "></i>
                 </div>
             </div>
-
         </div>
-
     </footer>
 
 
 
 
 
-
+    <!--Bundle BS 5 JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js " integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8 " crossorigin="anonymous "></script>
 </body>
 
